<resources>
    <string name="app_name" translatable="false">Ice Browser</string>
    <string name="desktopUA" translatable="false">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.163 Safari/537.36</string>
    <string name="amp" translatable="false"><![CDATA[&]]></string>
    <string name="quot" translatable="false">\"</string>
    <string name="window_close_onclick">Long press to close.</string>
    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="refresh_ad" translatable="false">Refresh Ad</string>
    <string name="start_muted" translatable="false">Start video ads muted</string>
    <string name="video_status" translatable="false">Video status: </string>
    <string name="file_chooser_open_fail">Can\'t open file chooser</string>
    <string name="open_file_try_download">Can\'t open files of this type. Try downloading instead.</string>
    <string name="insecure_connection">Insecure connection</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="filename">Filename: </string>
    <string name="size">Size: </string>
    <string name="url">URL: </string>
    <string name="title">Title: </string>
    <string name="cookie">Cookie</string>
    <string name="open">Open</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_found">Not found</string>
    <string name="open_in_new_tab">Open in new tab</string>
    <string name="copy_url">Copy URL</string>
    <string name="show_full_url">Show full URL</string>
    <string name="full_url">Full URL</string>
    <string name="image">Image: </string>
    <string name="image_options">Image Options</string>
    <string name="overlay_permission_required">Overlay Permission Required</string>
    <string name="overlay_need">This feature need overlay permission to work normally.</string>
    <string name="storage_permission_required">Storage Permission Required</string>
    <string name="storage_need">You need to allow this to make sure floating browser and gallery can work as intended.</string>
    <string name="dnd_permission_required">Allow do not disturb feature?</string>
    <string name="dnd_need">This feature allows Floating Window to not easily killed by system (Optional).</string>
    <string name="dnd_cancelled">Do Not Disturb permission rejected, some feature may not work properly. You can activate this later.</string>
    <string name="dnd_not_active">Please activate Do not disturb permission in settings.</string>
    <string name="download_fail">Can\'t Download URL</string>
    <string name="empty_clipboard">Clipboard is empty</string>
    <string name="overlay_running">Overlay is running</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="rename">Rename</string>
    <string name="rename_bookmark">Rename Bookmark</string>
    <string name="change_url">Change URL</string>
    <string name="change_bookmark_url">Change bookmark URL</string>
    <string name="delete">Delete</string>
    <string name="bookmarks_error">Bookmarks error</string>
    <string name="cant_open_bookmark_database">Can\'t open bookmarks database</string>
    <string name="delete_all_bookmark_confirmation">Delete all bookmarks?</string>
    <string name="delete_all_bookmark_confirmation_desc">This action cannot be undone</string>
    <string name="delete_all">Delete all</string>
    <string name="main_top_navbar_tab_box_icon_desc">Tabs</string>
    <string name="main_top_navbar_menu_button_desc">Top menu</string>
    <string name="main_top_navbar_search_next_desc">Find next</string>
    <string name="main_top_navbar_search_prev_desc">Find previous</string>
    <string name="main_top_navbar_search_close_desc">Close find</string>
    <string name="main_top_navbar_search_edit_hint">Find…</string>
    <string name="main_top_navbar_autocomplete_hint">Search or type URL</string>
    <string name="main_tabs_more_icon_desc">More settings</string>
    <string name="main_tabs_new_tab_icon_desc">New tab</string>
    <string name="main_tabs_close_icon_desc">Close tab menu</string>
    <string name="main_tabs_title">Tabs</string>
    <string name="main_tabs_more_title">More</string>
    <string name="main_tabs_new_tab_title">New Tab</string>
    <string name="main_tabs_close_title">Close</string>
    <string name="main_tabs_close_tab">Close this tab</string>
    <string name="main_tabs_item_adapter_favicon_desc">Favicon</string>
    <string name="main_tabs_item_adapter_tab_close_desc">Close tab</string>
    <string name="main_tabs_more_bottomsheet_close_icon">Close tab settings</string>
    <string name="main_tabs_more_bottomsheet_title">Customize Tab</string>
    <string name="main_tabs_more_javascript_toggle_title">Javascript</string>
    <string name="main_tabs_more_css_toggle_title">CSS</string>
    <string name="main_tabs_more_cache_toggle_title">Cache</string>
    <string name="main_tabs_more_dom_storage_toggle_title">DOM</string>
    <string name="main_tabs_more_overview_toggle_title">Overview</string>
    <string name="main_tabs_more_zoom_toggle_title">Zoom</string>
    <string name="main_tabs_more_image_toggle_title">Image</string>
    <string name="main_tabs_more_loader_toggle_title">Loader</string>
    <string name="main_tabs_more_popup_toggle_title">Popup</string>
    <string name="main_tabs_more_text_decrease_toggle_title">Small Text</string>
    <string name="main_tabs_more_text_normal_toggle_title">Normal Text</string>
    <string name="main_tabs_more_text_increase_toggle_title">Big Text</string>
    <string name="main_tabs_more_use_this_settings_for">Use this settings for: </string>
    <string name="main_tabs_more_only_this_tab_checklist_desc">This tab</string>
    <string name="main_tabs_more_for_new_tab_checklist_desc">New tab</string>
    <string name="main_tabs_more_for_all_tabs_checklist_desc">All tabs</string>
    <string name="main_tabs_more_save_current_settings_checklist_title">Save settings</string>
    <string name="main_tabs_more_save_current_settings_checklist_desc">Allowing to save settings to app and use it later.</string>
    <string name="main_tabs_more_apply_button">Apply</string>
    <string name="open_with">Open with</string>
    <string name="fail">Failed</string>
    <string name="open_with_fail">No app can open this URL.</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="save_bookmark">Save bookmark</string>
    <string name="license_id_menu">License ID</string>
    <string name="license_id_activated">License ID found, premium feature activated</string>
    <string name="license_empty">Enter your license ID</string>
    <string name="license_used">License used in another device</string>
    <string name="license_deactivated">This ID is currently not active</string>
    <string name="license_not_found">ID not found</string>
    <string name="license_active">You are in premium mode</string>
    <string name="bookmark_saved">Bookmark saved</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="main_bottom_navbar_prev_btn_desc">Previous page</string>
    <string name="main_bottom_navbar_next_btn_desc">Next page</string>
    <string name="main_bottom_navbar_home_btn_desc">Home</string>
    <string name="main_bottom_navbar_refresh_btn_desc">Refresh</string>
    <string name="main_bottom_navbar_menu_btn_desc">Open menu</string>
    <string name="main_bottomsheet_menu_close_icon">Close Quick Settings</string>
    <string name="main_bottomsheet_menu_title">Quick Settings</string>
    <string name="main_bottomsheet_menu_mode">Desktop</string>
    <string name="main_bottomsheet_menu_open_bookmarks">Bookmark</string>
    <string name="main_bottomsheet_menu_cookies_toggle">Cookies</string>
    <string name="main_bottomsheet_menu_share">Share</string>
    <string name="main_bottomsheet_menu_find">Find</string>
    <string name="main_bottomsheet_menu_overlay">Overlay</string>
    <string name="main_bottomsheet_menu_tab_info">Info</string>
    <string name="main_bottomsheet_menu_settings">Settings</string>
    <string name="main_bottomsheet_menu_rate">Rate Us</string>
    <string name="main_bottomsheet_menu_exit_app">Exit</string>
    <string name="main_bottomsheet_menu_mode_icon_desc">Change mode</string>
    <string name="main_bottomsheet_menu_open_bookmarks_icon_desc">Open bookmarks</string>
    <string name="main_bottomsheet_menu_cookies_toggle_icon_desc">Cookies toggle</string>
    <string name="main_bottomsheet_menu_share_icon_desc">Share link</string>
    <string name="main_bottomsheet_settings_close_settings_icon_desc">Close browser settings</string>
    <string name="main_bottomsheet_settings_title">Settings</string>
    <string name="main_bottomsheet_settings_clear_browser_data_title">Clear Browser Data</string>
    <string name="main_bottomsheet_settings_clear_browser_data_desc">Clear all browser data to save some storage.</string>
    <string name="main_bottomsheet_settings_delete_all_bookmarks_title">Delete All Bookmarks</string>
    <string name="main_bottomsheet_settings_delete_all_bookmarks_desc">Delete all saved bookmarks.</string>
    <string name="window_main_top_navbar_close_button_desc">Close button</string>
    <string name="window_main_top_navbar_layout_set_button_desc">Open floating settings</string>
    <string name="window_main_top_navbar_menu_button_desc">Open menu</string>
    <string name="window_search_show_desc">Show search</string>
    <string name="window_search_hide_desc">Hide search</string>
    <string name="window_popup_layout_set_item_hide">Hide</string>
    <string name="window_popup_layout_set_item_topper">Topper</string>
    <string name="window_popup_layout_set_item_new_window">New Window</string>
    <string name="window_popup_layout_set_item_gallery">Gallery</string>
    <string name="window_popup_layout_set_item_more">More</string>
    <string name="window_popup_layout_set_item_hidden_mode">Hidden Mode</string>
    <string name="window_popup_layout_set_item_static_bubble">Static bubble</string>
    <string name="window_popup_layout_set_item_long_click">Long click to show</string>
    <string name="window_popup_layout_set_item_no_focus">Non focusable</string>
    <string name="window_popup_layout_set_item_dnd">Do not Disturb</string>
    <string name="window_popup_layout_set_item_anti_obscure">Anti obscure</string>
    <string name="window_popup_layout_set_item_anti_obscure_option">Which mode will you use?</string>
    <string name="window_popup_layout_set_item_anti_obscure_volume">Volume</string>
    <string name="window_popup_layout_set_item_anti_obscure_shake">Shake</string>
    <string name="window_popup_layout_set_item_close_all_window">Close all window</string>
    <string name="window_popup_browser_menu_item_prev">Previous</string>
    <string name="window_popup_browser_menu_item_forward">Forward</string>
    <string name="window_popup_browser_menu_item_home">Home</string>
    <string name="window_popup_browser_menu_item_refresh">Refresh</string>
    <string name="window_popup_browser_menu_item_tabs">Tabs</string>
    <string name="window_popup_browser_menu_item_more">More</string>
    <string name="window_popup_browser_menu_item_javascript">Javascript</string>
    <string name="window_popup_browser_menu_item_css">CSS</string>
    <string name="window_popup_browser_menu_item_cache">Cache</string>
    <string name="window_popup_browser_menu_item_dom">DOM</string>
    <string name="window_popup_browser_menu_item_popup">Popup</string>
    <string name="window_popup_browser_menu_item_text_small">Small text</string>
    <string name="window_popup_browser_menu_item_text_normal">Normal text</string>
    <string name="window_popup_browser_menu_item_text_big">Big text</string>
</resources>