<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_bottomsheet_settings_title"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/main_bottomsheet_settings_close_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:foreground="@drawable/ripple_rounded"
            android:contentDescription="@string/main_bottomsheet_settings_close_settings_icon_desc"
            android:src="@drawable/bottomsheet_settings_close_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/main_bottomsheet_settings_clear_browser_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="@drawable/ripple_rectangle"
        android:orientation="vertical"
        android:padding="7dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_bottomsheet_settings_clear_browser_data_title"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/main_bottomsheet_settings_clear_browser_data_desc"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/icon_color" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_bottomsheet_settings_delete_all_bookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:foreground="@drawable/ripple_rectangle"
        android:padding="7dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_bottomsheet_settings_delete_all_bookmarks_title"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/main_bottomsheet_settings_delete_all_bookmarks_desc"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/icon_color" />

    </LinearLayout>

</LinearLayout>