<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/window_main_top_navbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/window_main_top_navbar_close_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/window_main_top_navbar_close_button_desc"
            android:foreground="@drawable/ripple_rounded"
            android:src="@drawable/top_navbar_close_button_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/window_search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/top_navbar_autocomplete_background"
            android:backgroundTint="#2A2A2A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/window_main_top_navbar_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@android:color/transparent"
                android:completionThreshold="1"
                android:hint="@string/main_top_navbar_autocomplete_hint"
                android:iconifiedByDefault="false"
                android:imeActionLabel="Go"
                android:imeOptions="actionGo"
                android:inputType="textUri"
                android:paddingStart="13dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textSize="15sp"
                android:paddingBottom="10dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#A4A4A4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor,VisualLintTextFieldSize,TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/window_main_top_navbar_hide_search_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/window_search_hide_desc"
            android:foreground="@drawable/ripple_rounded"
            android:src="@drawable/window_search_hide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/window_main_top_navbar_layout_set_button"
            app:layout_constraintStart_toEndOf="@id/window_search_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/window_main_top_navbar_show_search_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/window_search_show_desc"
            android:foreground="@drawable/ripple_rounded"
            android:src="@drawable/window_search_show"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/window_main_top_navbar_close_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/window_main_top_navbar_layout_set_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/window_main_top_navbar_layout_set_button_desc"
            android:foreground="@drawable/ripple_rounded"
            android:src="@drawable/top_navbar_layout_set_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/window_main_top_navbar_menu_button"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/window_main_top_navbar_menu_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/window_main_top_navbar_menu_button_desc"
            android:foreground="@drawable/ripple_rounded"
            android:src="@drawable/top_navbar_menu_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/window_main_top_navbar_search_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="7dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/window_main_top_navbar">

        <EditText
            android:id="@+id/window_main_top_navbar_search_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/main_top_navbar_search_edit_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            tools:ignore="VisualLintBounds" />

        <TextView
            android:id="@+id/window_main_top_navbar_search_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:ignore="VisualLintBounds" />

        <ImageView
            android:id="@+id/window_main_top_navbar_search_next"
            android:layout_width="44dp"
            android:layout_height="24dp"
            android:contentDescription="@string/main_top_navbar_search_next_desc"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/top_navbar_searchedit_to_bottom_icon"
            app:tint="#61615f"
            tools:ignore="VisualLintBounds" />

        <ImageView
            android:id="@+id/window_main_top_navbar_search_prev"
            android:layout_width="44dp"
            android:layout_height="24dp"
            android:contentDescription="@string/main_top_navbar_search_prev_desc"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/top_navbar_searchedit_to_top_icon"
            app:tint="#61615f"
            tools:ignore="VisualLintBounds" />

        <ImageView
            android:id="@+id/window_main_top_navbar_search_close"
            android:layout_width="34dp"
            android:layout_height="24dp"
            android:contentDescription="@string/main_top_navbar_search_next_desc"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bottomsheet_settings_close_icon"
            app:tint="#61615f"
            tools:ignore="VisualLintBounds" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>



